--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/DnDPoster.jpg":["assets/DnDPoster.jpg"],"assets/dice_32.png":["assets/dice_32.png"],"assets/square-dice.png":["assets/square-dice.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/dice_32.png":["assets/dice_32.png"],"assets/dndposter.jpg":["assets/dndposter.jpg"],"assets/square-dice.png":["assets/square-dice.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
